# covid19-tweet-bot

./: .gitignore  LICENSE  README.md  TWEET.txt  pyproject.toml
.github/workflows/: tweet.yml  tweet_d.yml  tweet_g.yml
src/: config.py  deno.json  get_data.py  main.py  main.ts
tweet/: DTWEET.txt  GTWEET.txt
