[tool.poetry]
name = "covid19-tweet-bot"
version = "0.1.0"
description = ""
authors = ["ryoppippi <1560508+ryoppippi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
twitter = "^1.18.0"
python-dotenv = "^0.12.0"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
